--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arc Tween Animation with D3.js</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        svg {
-            width: 100%;
-            height: 100vh;
-        }
-    </style>
+    <title>Web Page with D3.js Chart</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS -->
 </head>
 <body>
-    <svg></svg>
+    <div class="container">
+        <div class="header"></div>
+        <h1 class="title">Lorem Ipsum Dolor Sit Amet</h1>
+        <div class="content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae odio fringilla aliquam. Donec vehicula elit eget dolor fermentum, at pharetra arcu varius. Aliquam erat volutpat.</p>
+            <svg></svg>
+        </div>
+        <div class="footer">Footer Content</div>
+    </div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="script.js"></script>
 </body>
