--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae odio fringilla aliquam. Donec vehicula elit eget dolor fermentum, at pharetra arcu varius. Aliquam erat volutpat.</p>
             <svg></svg>
         </div>
+        <div class="yellow-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae odio fringilla aliquam. Donec vehicula elit eget dolor fermentum, at pharetra arcu varius. Aliquam erat volutpat. Curabitur vehicula libero ut libero aliquam, non consectetur lectus blandit. Maecenas a ultricies neque. Integer vel libero magna.</p>
+        </div>
         <div class="footer">Footer Content</div>
     </div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
