--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header"></div>
-        <h1 class="title">Web Page with D3.js</h1>
+        <h1 class="title">Lorem Ipsum Dolor Sit Amet</h1>
         <div class="content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae odio fringilla aliquam. Donec vehicula elit eget dolor fermentum, at pharetra arcu varius. Aliquam erat volutpat.</p>
             <svg></svg>
