--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Page with D3.js Chart</title>
+    <title>Web Page with Pie Chart</title>
     <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS -->
 </head>
 <body>
@@ -12,14 +12,13 @@
         <h1 class="title">Lorem Ipsum Dolor Sit Amet</h1>
         <div class="content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae odio fringilla aliquam. Donec vehicula elit eget dolor fermentum, at pharetra arcu varius. Aliquam erat volutpat.</p>
-            <svg></svg>
+            <svg viewBox="0 0 32 32"></svg>
         </div>
         <div class="yellow-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae odio fringilla aliquam. Donec vehicula elit eget dolor fermentum, at pharetra arcu varius. Aliquam erat volutpat. Curabitur vehicula libero ut libero aliquam, non consectetur lectus blandit. Maecenas a ultricies neque. Integer vel libero magna.</p>
         </div>
         <div class="footer">Footer Content</div>
     </div>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
