--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div class="header"></div>
-        <h1 class="title">Lorem Ipsum Dolor Sit Amet</h1>
+        <h1 class="title">Las sequías, un riesgo para México</h1>
         <div class="intro">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae odio fringilla aliquam. Donec vehicula elit eget dolor fermentum, at pharetra arcu varius. Aliquam erat volutpat.</p>
+            <h2>#sequias</h2>
+            <p>Debido a la actual sequía el país está en su peor crisis hídrica en tres años</p>
         </div>
         <h4 class="chart-title">Lorem Ipsum Dolor Sit Amet</h4>
         <h5 class="chart-description">Lorem Ipsum Dolor Sit Amet</h5>
