--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h2>#sequias</h2>
             <p>Debido a la actual sequía el país está en su peor crisis hídrica en tres años</p>
         </div>
-        <h4 class="chart-title">Lorem Ipsum Dolor Sit Amet</h4>
-        <h5 class="chart-description">Lorem Ipsum Dolor Sit Amet</h5>
+        <h4 class="chart-title">En crisis</h4>
+        <h5 class="chart-description">Territorio nacional afectado por algún grado de sequía</h5>
         <div class="chart-container">
             <svg viewBox="0 0 500 500"></svg>
         </div>
