--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             <h2>#sequias</h2>
             <p>Debido a la actual sequía el país está en su peor crisis hídrica en tres años</p>
         </div>
+        <div class="additional-text">
+            <h3>Lorem Ipsum</h3>
+            <p>El Monitor de Sequía en México (MSM), del Servicio Meteorológico Nacional, señala que al 30 de abril de 2024 el número de municipios con sequía fueron mil 963, es decir, 79.4 por ciento de los 2 mil 469 municipios y alcaldías de los 31 estados y la Ciudad de México. De estos municipios, 380 sufrían sequía extrema y 215 sequía excepcional.
+
+                De acuerdo con el MSM, en la sequía excepcional las pérdidas de cultivos y pastos son excepcionales, hay excepcionales riesgos de incendios, carencia de agua en presas, arroyos y pozos, todo lo cual crea una situación de emergencia excepcional.
+                
+                Las principales consecuencias de la prolongada sequía y de las altísimas temperaturas de las últimas semanas es la caída de la producción de granos, principalmente de maíz, lo que podría convertirnos en el principal importador de este cereal en el mundo.
+            </p>
+        </div>
         <h4 class="chart-title">En crisis</h4>
         <h5 class="chart-description">Territorio nacional afectado por algún grado de sequía</h5>
         <div class="chart-container">
