--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="header"></div>
         <h1 class="title">Las sequías, un riesgo para México</h1>
         <div class="intro">
-            <h2>#sequias</h2>
+            <h2>#Sequias</h2>
             <p>Debido a la actual sequía el país está en su peor crisis hídrica en tres años</p>
         </div>
         <div class="additional-text">
-            <h3>Lorem Ipsum</h3>
+            <h3>Firma</h3>
             <p>El Monitor de Sequía en México (MSM), del Servicio Meteorológico Nacional, señala que al 30 de abril de 2024 el número de municipios con sequía fueron mil 963, es decir, 79.4 por ciento de los 2 mil 469 municipios y alcaldías de los 31 estados y la Ciudad de México. De estos municipios, 380 sufrían sequía extrema y 215 sequía excepcional.
 
                 De acuerdo con el MSM, en la sequía excepcional las pérdidas de cultivos y pastos son excepcionales, hay excepcionales riesgos de incendios, carencia de agua en presas, arroyos y pozos, todo lo cual crea una situación de emergencia excepcional.
