--- a/index.html
+++ b/index.html
@@ -42,3 +42,12 @@
         <!-- Nuevo contenedor para el segundo gráfico -->
         <div class="additional-chart-container">
             <svg id="chart2" viewBox="0 0 928 500"></svg>
+        </div>
+        <div class="footer">
+            <h6>Footer Content</h6>
+        </div>
+    </div>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
