--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Page with Interactive Chart</title>
     <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> <!-- Enlace a Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Enlace a Google Fonts -->
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,7 @@
             <h2>#Sequias</h2>
             <p>Debido a la actual sequía el país está en su peor crisis hídrica en tres años</p>
         </div>
-        <div class="additional-text">
+        <div class="text">
             <h3>Firma</h3>
             <p>El Monitor de Sequía en México (MSM), del Servicio Meteorológico Nacional, señala que al 30 de abril de 2024 el número de municipios con sequía fueron mil 963, es decir, 79.4 por ciento de los 2 mil 469 municipios y alcaldías de los 31 estados y la Ciudad de México. De estos municipios, 380 sufrían sequía extrema y 215 sequía excepcional.
 
@@ -29,7 +29,7 @@
         <div class="chart-container">
             <svg id="chart1" viewBox="0 0 500 500"></svg>
         </div>
-        <div class="additional-text">
+        <div class="text">
             <h3>Estrés hídrico</h3>
             <p>La Secretaría del Medio Ambiente del Gobierno de la Ciudad de México [SEDEMA] señala que hay estrés hídrico cuando la demanda de agua es más alta que la cantidad disponible durante un lapso determinado, o cuando se restringe su uso por la mala calidad del agua.
                 
